# kyber

./: .gitignore  CMakeLists.txt  README.md
src/: weak_impl.h
src/fips/: cbd.h  common.h  include.h  mlkem.h  opt.h  poly.h  rand.h  shake.h
test/: demo.cc  main.cc
